# SigVigil

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
examples/: migraine_analysis.py
scripts/: add_captions.py  hormonal_interaction.py  preprocess.py  run_analysis.py  setup_gitignore.py
sigvigil/: __init__.py  core.py
sigvigil/analysis/: __init__.py  sensitivity.py  stratified.py
sigvigil/report/: __init__.py  generator.py
sigvigil/stats/: __init__.py  contingency.py  corrections.py  ebgm.py  ic.py  prr.py  ror.py
sigvigil/viz/: __init__.py  heatmap.py  scatter.py  timeline.py
tests/: test_stats.py
